# doctor

./: .gitignore  Cargo.toml  README.md  doctor.js  doctor.win32-x64-msvc.node  index.d.ts  index.js  package.json  pnpm-lock.yaml
.cargo/: config.toml
.github/workflows/: CI.yml  cargo.yml
npm/android-arm64/: README.md  package.json
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/linux-arm-gnueabihf/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-arm64-musl/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: changelog.rs  context.rs  diagnostic.rs  error.rs  handler.rs  lib.rs  npm.rs  rules.rs
src/changelog/: git.rs
src/rules/: children_key.rs  redirect.rs  repeat.rs
