[package]
edition = "2021"
name = "doctor"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.0.2", default-features = false, features = ["napi4"] }
napi-derive = "2.0.1"
structopt = "0.3.13"
reqwest="0.9.18"
failure = "0.1.6"
exitfailure = "0.5.1"
regex = "1"
chrono = "0.4.10"
semver = "0.9.0"
git2 = "0.14"
deno_ast = { version = "0.5.0", features = ["transforms", "utils", "visit", "view"] }
swc_ecmascript = { version = "0.82.0", features = ["parser"] }
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
tokio = { version = "1", features = ["full"] }
annotate-snippets = { version = "0.9.1", features = ["color"] }


[build-dependencies]
napi-build = "1.2.1"

[profile.release]
lto = true
